<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_nomeClube"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id = "@+id/TxtEditNomeClube"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:inputType = "text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_anoFundacao"
        android:textAlignment="inherit" />

    <EditText
        android:id="@+id/TxtEditAnoFundacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:textAlignment="inherit" />

    <Button
        android:id = "@+id/btinserir"
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:text = "@string/btn_salvar" />



</LinearLayout>
